# city-guide-api

./: README.md  main.py  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
city_guide/: settings.py  urls.py  wsgi.py
places/: api_urls.py  api_views.py  apps.py  constants.py  exceptions.py  mixins.py  models.py  resources.py  serializers.py  tests.py  urls.py  views.py
places/migrations/: 0001_initial.py  0002_seed_place_categories.py
places/services/: __init__.py  cache.py  categories.py  mappers.py  open_street_map.py  operations.py  search.py  types.py
places/tests/: conftest.py  test_cache.py  test_mappers.py  test_operations.py
places/tests/api/: test_serializers.py  test_views.py
places/tests/services/: test_cache.py  test_categories.py  test_mappers.py  test_open_street_map.py  test_search.py
