[project]
name = "city-guide-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7,<6.1",
    "django-environ==0.9.0",
    "djangorestframework>=3.16",
    "httpx>=0.27,<1",
    "mock==4.0.3",
    "pydantic>=2,<3",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "city_guide.settings"
python_files = ["test_*.py"]
filterwarnings = [
    "ignore:'pkgutil.find_loader' is deprecated:DeprecationWarning:environ.compat",
]

[dependency-groups]
dev = [
    "chainmock>=2.0.0",
    "django-stubs>=6.0.7",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.3.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.16.0",
]
